--- a/SavingsGoalManager/src/main/resources/templates/index.html
+++ b/SavingsGoalManager/src/main/resources/templates/index.html
@@ -2,8 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <link rel="stylesheet" type="text/css" href="css/init_styles.css">
-    <link rel="stylesheet" type="text/css" href="js/dojo-release-1.14.2/dojo/resources/dojo.css">
-    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/dojo/1.10.4/dijit/themes/tundra/tundra.css">
+    <link rel="stylesheet" type="text/css" href="js/dojo-themes/dojo.css">
+    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/dojo/1.14.1/dijit/themes/tundra/tundra.css">
+    <script src="//ajax.googleapis.com/ajax/libs/dojo/1.14.1/dojo/dojo.js"></script>
     <meta charset="UTF-8">
     <title>Budget Tracking</title>
 </head>
@@ -13,9 +14,6 @@
     <p></p>
 
     <p class="commonBoldTextFormat">Budget Tracking</p>
-    
-    <!-- load Dojo -->
-   <script src="js/dojo-release-1.14.2/dojo/dojo.js"></script>
     
    <script>require(["js/menu.js"], function(applyMenu){});</script>
     
