--- a/SavingsGoalManager/src/main/resources/templates/savingsgoals/addSavingsGoal.html
+++ b/SavingsGoalManager/src/main/resources/templates/savingsgoals/addSavingsGoal.html
@@ -41,8 +41,8 @@
             <th>End Date</th>
             <th>Target Amount</th>
             <th>Initial Balance</th>
-            <th>Months</th>
-            <th>Savings Per Month</th>
+            <!-- <th>Months</th> -->
+            <!-- <th>Savings Per Month</th> -->
             <th>Weeks</th>
             <th>Savings Per Week</th>
             <th>Days</th>
@@ -56,8 +56,8 @@
             <td th:text="${#dates.format(savingsGoal.savingsEndDate, 'MM/dd/yyyy')}"></td>
             <td th:text="${savingsGoal.targetAmount}"></td>
             <td th:text="${savingsGoal.initialBalance}"></td>
-            <td th:text="${savingsGoal.monthsTillPayment}"></td>
-            <td th:text="${#numbers.formatCurrency(savingsGoal.savingsPerMonth)}"></td>
+            <!-- <td th:text="${savingsGoal.monthsTillPayment}"></td> -->
+            <!-- <td th:text="${#numbers.formatCurrency(savingsGoal.savingsPerMonth)}"></td> -->
             <td th:text="${savingsGoal.weeksTillPayment}"></td>
             <td th:text="${#numbers.formatCurrency(savingsGoal.savingsPerWeek)}"></td>
             <td th:text="${savingsGoal.daysTillPayment}"></td>
